# Tensoria

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
include/base/: tensor.h  tensor_allocator.h  tensor_arithmetic.h  tensor_broadcast.h  tensor_contraction.h  tensor_def.h  tensor_indexing.h  tensor_io.h  tensor_op.h  tensor_reduce.h  tensor_shaping.h  tensor_statistics.h  tensor_utility.h
src/base/: tensor_allocator.c
